# gRPC

./: CMakeLists.txt  README.md  benchmark_C.txt  benchmark_D.txt  benchmark_E.txt  benchmark_F.txt  build.sh  duplicates.txt  node_D_data.txt  node_E_data.txt  node_F_data.txt  routing.json
clients/: client.py  client1_data.txt  client2_data.txt  client3_data.txt  collisionDataClient.py  data_pb2.py  data_pb2_grpc.py
protos/: data.proto
servers/: config_loader.cpp  config_loader.h  data.grpc.pb.cc  data.grpc.pb.h  data.pb.cc  data.pb.h  scatter.cpp  scatter.h  server_a.cpp  server_a_forwarding.cpp  server_b.cpp  server_c.cpp  server_d.cpp  server_e.cpp  server_receiver.cpp  shared_data.h
tests/: test_clients.sh
tools/: inspect_shared_memory.cpp
